--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="password generator"
-      content="site that creates your password"
+      name="pw"
+      content="site that helps you with your passwords"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="styles.css" />
-    <title>PW Generator</title>
+    <title>PassWord</title>
   </head>
   <body> 
     <div id="root"></div>
