--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="pw"
       content="site that helps you with your passwords"
     />
+    <script data-ad-client="ca-pub-6989703107023984" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="styles.css" />
     <title>PassWord</title>
